# seir-modelling

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  LICENSE  README.md  project.ipynb  pyproject.toml
scripts/: generate_docs.sh
simpyl/: usage.md
simpyl/core/: __init__.py  metaclass.py
simpyl/model/: model.py  registry.py  relationship.py  resource.py
simpyl/model/interactions/: interaction.py
simpyl/model/resources/: __init__.py  datafield.py  entity.py  resource.py
simpyl/studies/neuroscience/: neuroscience.ipynb
simpyl/studies/stdp/: README.md  neuron.py  neuron_simulation.py  neuroscience.ipynb  project.ipynb  run.py  stdp.ipynb
simpyl/system/: __init__.py  metaclass.py
simpyl/system/resources/: __init__.py  entity.py  resource.py  variable.py
simpyl/system/system/: __init__.py  registry.py  system.py
src/biosimpy/: app.py  graph.py
src/biosimpy/epidemiology/: simulation.py
src/biosimpy/seir/: models.py  simulation.ipynb  simulation.py
src/examples/: epidemiology.py
src/examples/epidemiology/: models.py
src/simgraph/: __init__.py  exceptions.py  graph.py  resources.py
src/simgraph/epidemiology/: simulation.py
src/simpyl/model/: README.md  entity.py  interaction.py  model.py  resource.py
studies/seir/: README.md
studies/stdp/: README.md
tests/: conftest.py
tests/core/: test_metaclass.py
tests/model/: test_resource.py
tests/model/resources/: test_resource.py
tests/system/: test_metaclass.py
