[tool.poetry]
name = "biological-simulations"
version = "0.1.0"
description = ""
authors = ["Josh Bercich <joshbercich@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 89
indent-width = 4
target-version = "py311"
extend-include = ["*.ipynb"]

[tool.ruff.format]
indent-style = "tab"
docstring-code-format = true
