[tool.poetry]
name = "biosimpy"
version = "0.1.0"
description = "Experimenting with various different computer simulations in biology."
authors = ["Josh Bercich <joshbercich@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
polars = "^0.20.31"
polars-lts-cpu = "^0.20.18"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 89
indent-width = 4
target-version = "py311"
extend-include = ["*.ipynb"]

[tool.ruff.format]
indent-style = "tab"
docstring-code-format = true
